--- a/index.html
+++ b/index.html
@@ -1,53 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=#, initial-scale=1.0">
-    <title>To do list</title>
-    <link rel="stylesheet" href="main.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>To do list</title>
+	<link rel="stylesheet" href="main.css" />
 </head>
 <body>
-    <header>
-        <h1>To do list</h1>
-        <form id="new-task">
-            <input type="text" id="input" placeholder="Enter new task">
-            <input type="submit" value="Add task" id="new-task-submit">
+	
+	<header>
+		<h1>To do list</h1>
+		<form id="new-task-form">
+			<input 
+				type="text" 
+				name="new-task-input" 
+				id="new-task-input" 
+				placeholder="Enter new task" />
+			<input 
+				type="submit"
+				id="new-task-submit" 
+				value="Add task" />
+		</form>
+	</header>
+	<main>
+		<section class="task-list">
+			<h2>Tasks</h2>
 
-        </form>
-    </header>
-    <main>
-        <section class="task-list">
-            <h2>Tasks</h2>
-
-            <div id="tasks">
-                <div class="task">
-
-                    <div class="content">
-                        <input type="text" class="text" value="new-task" readonly>
-
-
-
-                    </div>
-                    <div class="actions">
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
-                    </div>
-                </div>
-        
+			<div id="tasks">
 
 
-            </div>
-                
+			</div>
+		</section>
+	</main>
 
-
-
-        </section>
-
-
-
-
-
-    </main>
-    <script src="main.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
