finally finished everything

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 		</section>
 	</main>
-	<a id="home-button" href="../CV-for-Vincent-Sequerah/index.html">Home</a>
+	<a id="home-button" href="../../CV-for-Vincent-Sequerah/index.html">Home</a>
 	<script src="main.js"></script>
 </body>
 </html>
